# FastPay

./: BUILD_ANDROID.md  CHANGELOG.md  CMakeLists.txt  DEPLOYMENT_GUIDE.md  FastPayQt.pro  HOSTING_GUIDE.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  USE_QT_FOR_ANDROID.md  configure.sh  main.cpp  mainwindow.cpp  mainwindow.h  pindialog.cpp  pindialog.h  server_config.h  transactionengine.cpp  transactionengine.h  transactionhistory.cpp  transactionhistory.h  ultrasoundhelper.cpp  ultrasoundhelper.h  verify.sh
Crypto/: AES.cpp  AES.h  CMakeLists.txt  CryptoHandler.h  DigitalSignature.h  ECDSA.cpp  RSA.cpp  Ultrasound.cpp  Ultrasound.h  transaction.cpp
android/: AndroidManifest.xml
android/res/values/: strings.xml
demo/: index.html
server/: README.md  main.py  main_production.py  requirements.txt
